# battle_game

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  ForkTask1.cpp  JJC_README.md  LICENSE  MultiSkill_tank_jq_zhang.h  README.md  Test.md  Test_Fork.md  first_task.cpp  test.cpp  wmj_PR_test.txt  wooden_block.h  ybw_task1.cpp
src/battle_game/: CMakeLists.txt  battle_game.cpp
src/battle_game/app/: CMakeLists.txt  app.cpp  app.h  app_settings.h  client.cpp  device_model.h  message.cpp  message.h  server.cpp  server.h
src/battle_game/core/: BUFF_INSTRUCTION.md  CMakeLists.txt  README.md  RLUD_tank.cpp  RLUD_tank.h  buff.cpp  buff.h  bullet.cpp  bullet.h  effect.cpp  effect.h  game_core.cpp  game_core.h  input_data.cpp  input_data.h  life_bar.cpp  life_bar.h  object.cpp  object.h  obstacle.cpp  obstacle.h  particle.cpp  particle.h  player.cpp  player.h  selectable_units.cpp  status.cpp  status.h  turret.cpp  turret.h  unit.cpp  unit.h  units.h
src/battle_game/core/bullets/: BoobooBullet.cpp  COVID_ball.cpp  COVID_ball.h  DF11A_rocket.cpp  DF11A_rocket.h  HESH.cpp  SplitBullet.cpp  SplitBullet.h  accumulator_bullet.cpp  accumulator_bullet.h  airborne_bomb.cpp  airborne_bomb.h  airrocket.cpp  airrocket.h  basketball.cpp  basketball.h  big_ball.cpp  big_ball.h  big_cannon_ball.cpp  big_cannon_ball.h  booboobullet.cpp  booboobullet.h  booboobullet2.cpp  booboobullet2.h  boomerang.cpp  boomerang.h  bullets.h  cannon_ball.cpp  cannon_ball.h  charge_fire.cpp  charge_fire.h  chicken.cpp  chicken.h  circle.cpp  circle.h  cluster_bomb.cpp  cluster_bomb.h  coin.cpp  coin.h  colorful_ball.cpp  (+105 more)
src/battle_game/core/effects/: effects.h  invisible.cpp  invisible.h  regeneration.cpp  regeneration.h  speed_regulation.cpp  speed_regulation.h
src/battle_game/core/obstacles/: block.cpp  block.h  bramble.cpp  bramble.h  brambles.cpp  brambles.h  crater.cpp  crater.h  destructible_block.cpp  destructible_block.h  fragile_block.cpp  fragile_block.h  grass.cpp  grass.h  mount.cpp  mount.h  movable_block.cpp  movable_block.h  moveable_block.cpp  moveable_block.h  mud.cpp  mud.h  obstacles.h  rebounding_block.cpp  rebounding_block.h  repli_block.cpp  repli_block.h  river.cpp  river.h  safety_declaration.cpp  safety_declaration.h  strong_wall.cpp  strong_wall.h  swamp.cpp  swamp.h  tube.cpp  tube.h  wood.cpp  wood.h  wooden_block.cpp  (+1 more)
src/battle_game/core/particles/: bullet_hole.cpp  bullet_hole.h  bullet_storage.cpp  bullet_storage_.h  charge.cpp  charge.h  expansion.cpp  expansion_.h  explosion.cpp  explosion.h  heal.cpp  heal.h  particles.h  penetrating.cpp  penetrating_.h  ring_segments.cpp  ring_segments_.h  signal.cpp  signal_.h  smoke.cpp  smoke.h  stunning.cpp  stunning.h  target.cpp  target.h  thunderbolt.cpp  thunderbolt.h  (+2 more)
src/battle_game/graphics/: CMakeLists.txt  README.md  assets_manager.cpp  assets_manager.h  graphics.cpp  graphics.h  model.cpp  model.h  stb_image.h  texture.cpp  texture.h  util.cpp  util.h
src/battle_game/shaders/: CMakeLists.txt  object_structs.glsl  render.frag  render.vert
(+299 files in other folders)
